[package]
name = "dhcpserver"
version = "0.1.0"
authors = ["SHIMIZU Takuma <anti.soft.b@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.26.0"
byteorder = "1.3.4"
log = "0.4.11"
env_logger = "0.7.1"
rusqlite = "0.24.1"
ipnetwork = "0.17.0"
anyhow = "1.0.33"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
