[package]
name = "webserver"
version = "0.1.0"
authors = ["SHIMIZU Takuma <anti.soft.b@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.7.3", features = ["os-poll", "tcp"]}
regex = "1.3.9"
log = "0.4.11"
env_logger = "0.7.1"
anyhow = "1.0.33"
clap = "3.0.0-beta.2"
